# xiaoyang-photo-picker

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  启动_Windows.bat  启动_Windows_运行环境放C盘.bat  启动_macOS.command  小羊帮你筛照片.command
pic_selecter/: grouper.py  vision.py
scripts/: build_offline_bundle.py  launcher.py  run.sh
static/: app.js  index.html  style.css
tests/: test_app_runtime.py  test_archive_layout.py  test_grouper_workers.py  test_prescreen_session.py  test_quality.py  test_vision_gpu.py  test_vision_storage.py
