[project]
name = "pianke"
version = "0.1.0"
description = "Local photo prescreening, grouping, and A/B selection tool."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Pianke contributors" },
]
dependencies = [
  "packaging>=23",
  "setuptools<81",
  "requests>=2.31",
  "certifi>=2024.2.2",
  "Pillow>=10.0",
  "imagehash>=4.3",
  "flask>=3.0",
  "pillow-heif>=0.16",
  "numpy>=1.26",
  "scipy>=1.11",
  "opencv-contrib-python>=4.9",
  "rawpy>=0.18",
  "piexif>=1.1.3",
]

[project.optional-dependencies]
expert = [
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers>=4.40",
  "insightface>=0.7",
  "onnxruntime>=1.16; platform_system != 'Windows'",
  "onnxruntime-gpu[cuda,cudnn]>=1.16; platform_system == 'Windows'",
  "pyiqa>=0.1.10",
  "timm>=0.9",
]
tycoon = [
  "openai>=1.40",
]
dev = [
  "pytest>=8.0",
]
all = [
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers>=4.40",
  "insightface>=0.7",
  "onnxruntime>=1.16; platform_system != 'Windows'",
  "onnxruntime-gpu[cuda,cudnn]>=1.16; platform_system == 'Windows'",
  "pyiqa>=0.1.10",
  "timm>=0.9",
  "openai>=1.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
